# lol-analyzer

./: pyproject.toml
lol_analyzer/: config.yaml  main.py
