[tool.poetry]
name = "lol-analyzer"
version = "0.1.0"
description = ""
authors = ["Ken Yoshizoe <kenyoshizoe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
